2013-06-22  Jarkko Hietaniemi  <jhi@Vredefort-2.local>

	* Address rt.cpan.org #86334 for BSD-Resource: typo fixes
	
	* Address rt.cpan.org #62504 for BSD-Resource: Disable user/system
	  timing tests if workload accumulate too little time

	* Attempt harder in getrusage.t to burn enough user and system time,
	  refactor the "burn some cpu" utility into t/burn.pl, use that also
	  in t/times.t.
	
	* Fix a testing problem in NetBSD for t/setrlimit.t,
	  the tests were misnumbered.
	
	* Silence compilation warnings coming from Perl 5.18.0.
	
	* Clarify the license to be Artistic 2.0 or LGPL 2.0.
	
	* Regenerate ppport.h with Perl 5.18.0.
	
	* Release 1.2905.

2010-03-14  Jarkko Hietaniemi  <jhi@iki.fi>

	* Address rt.cpan.org #53856: memory leak in get_rlimits()

	* Address rt.cpan.org #53859: clarify get_rlimits() docs
	
	* Release 1.2904.

2009-03-31  Jarkko Hietaniemi  <jhi@iki.fi>

	* Address rt.cpan.org #44082:
	  "Bug in compiler detection (Makefile.PL)" (for AIX xlc)
	  Patch submitted in the report by rehsack at cpan.org.
	
	* Release 1.2903.

2008-12-30  Jarkko Hietaniemi  <jhi@iki.fi>

	* Lowered the "0.95 of the current limit" down to
	  "0.75 of the current limit" in setrlimit.t so that
	  more memory-constrained systems (like 2MB or less of
	  default stack) have slightly more chance of completing the test.
	  The 0.75 also has more chance of aligning with page sizes.
	
	* The scalar context return of getrlimit() was documented
	  to return an object, even though it really returned the
	  soft limit, reported by anicka@suse.cz.  Fixed the documentation.
	
	* Judging by the cpantesters reports no netbsd has a functional
	  RLIMIT_STACK, so skipping the test in all of them.
	
	* Release 1.2902.

2008-01-29  Jarkko Hietaniemi  <jhi@iki.fi>

	* netbsd-alpha does not have a functional RLIMIT_STACK,
	  reported by David Cantrell.  Skip the test, and document
	  as a known issue.
	
	* Release 1.2901.

2008-01-27  Jarkko Hietaniemi  <jhi@iki.fi>
